--- a/app/assets/stylesheets/spree/frontend/all.scss
+++ b/app/assets/stylesheets/spree/frontend/all.scss
@@ -400,7 +400,7 @@
 
         #product-images {
           margin-top: 0;
-          padding: 6vw;
+          padding: 6vw 0 6vw 0;
 
           #main-image img {
             width: 70%;
